; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_uipc_socket.c_so_wrknl_assert_unlocked.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_uipc_socket.c_so_wrknl_assert_unlocked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @so_wrknl_assert_unlocked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @so_wrknl_assert_unlocked(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.socket*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.socket*
  store %struct.socket* %5, %struct.socket** %3, align 8
  %6 = load %struct.socket*, %struct.socket** %3, align 8
  %7 = call i64 @SOLISTENING(%struct.socket* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load %struct.socket*, %struct.socket** %3, align 8
  %11 = call i32 @SOCK_UNLOCK_ASSERT(%struct.socket* %10)
  br label %16

12:                                               ; preds = %1
  %13 = load %struct.socket*, %struct.socket** %3, align 8
  %14 = getelementptr inbounds %struct.socket, %struct.socket* %13, i32 0, i32 0
  %15 = call i32 @SOCKBUF_UNLOCK_ASSERT(i32* %14)
  br label %16

16:                                               ; preds = %12, %9
  ret void
}

declare dso_local i64 @SOLISTENING(%struct.socket*) #1

declare dso_local i32 @SOCK_UNLOCK_ASSERT(%struct.socket*) #1

declare dso_local i32 @SOCKBUF_UNLOCK_ASSERT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
